@@ -1,4 +1,4 @@
-README for 0.9.12 cvBlob.
+README for 0.9.13 cvBlob.
 
 
 1. DOWNLOAD LATEST SOURCE
